<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context="com.petdom.breeder.ui.AddBreederActivity">


    <LinearLayout
        android:id="@+id/root_layout_add_breeder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/kennel_name" />

            <EditText
                android:id="@+id/et_kennel_name"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/city" />

            <EditText
                android:id="@+id/et_city"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/locality" />

            <EditText
                android:id="@+id/et_locality"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/pin_code" />

            <EditText
                android:id="@+id/et_pin"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="6"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/address" />

            <EditText
                android:id="@+id/et_address"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="13"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_email"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/website" />

            <EditText
                android:id="@+id/et_website"
                style="@style/style_text_medium"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/petdom_contact" />

            <EditText
                android:id="@+id/et_petdom_contact"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/owener_name" />

            <EditText
                android:id="@+id/et_owner_name"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/year_in_operation" />

            <EditText
                android:id="@+id/et_year_operation"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/started_on" />

            <EditText
                android:id="@+id/et_started_on"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/pet_types" />

            <Spinner
                android:id="@+id/sp_pet_types"
                style="@style/style_text_medium"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/breed_types" />

            <com.petdom.breeder.ui.MultiSpinner
                android:id="@+id/sp_breed_types"
                style="@style/style_text_medium"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <TextView
            style="@style/style_text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/clinical_services" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <CheckBox
                android:id="@+id/cb_vaccination"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/vaccination" />

            <CheckBox
                android:id="@+id/cb_surgery"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/surgery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <CheckBox
                android:id="@+id/cb_dentistry"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/dentistry" />

            <CheckBox
                android:id="@+id/cb_boarding"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/boarding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <CheckBox
                android:id="@+id/cb_pedigreed"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/pediegreedpup" />

            <CheckBox
                android:id="@+id/cb_training"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/training" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <CheckBox
                android:id="@+id/cb_grooming"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/grooming_centers" />

            <CheckBox
                android:id="@+id/cb_accessories"
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/accessories" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                style="@style/style_text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/breeder_scale" />

            <Spinner
                android:id="@+id/sp_breeder_scale"
                style="@style/style_text_medium"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:entries="@array/array_breeder_scale"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

